fix footer on iphone

--- a/assets/stylesheets/lean_canvas.css
+++ b/assets/stylesheets/lean_canvas.css
@@ -189,6 +189,8 @@ a.link-to-store:after {
 
 @media only screen and (max-width: 500px) {
   .footer{
+    height: 30px;
+    line-height: 30px;
     padding: 0 15px;
   }
 }
